<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="download_notification_channel">end_download_channel</string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="button_label">Download </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_loading_text">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_loading_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_loading_text">Retrofit - Type-safe HTTP client for Android and Java by Square,Inc</string>
    <string name="show_detail">Show Detail</string>
    <string name="file_name">File Name</string>
    <string name="status">Status</string>
    <string name="ok">OK</string>
</resources>
