<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/cloudCard"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"

        >
        <com.example.filedownloader.CloudDownloadView
            android:layout_margin="@dimen/large"
            android:id="@+id/cloudView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.cardview.widget.CardView>


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cloudCard">

        <RadioButton
            android:id="@+id/rb_glide_download"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/small"
            android:padding="@dimen/small"
            android:text="@string/glide_loading_text" />

        <RadioButton
            android:id="@+id/rb_app_download"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/small"
            android:padding="@dimen/small"
            android:text="@string/load_app_loading_text" />

        <RadioButton
            android:id="@+id/rb_retrofit_download"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/small"
            android:padding="@dimen/small"
            android:text="@string/retrofit_loading_text" />
    </RadioGroup>

    <com.example.filedownloader.LoadingButton
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/custom_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:progress="0.0"
        app:state="completed"/>



</androidx.constraintlayout.widget.ConstraintLayout>