<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailActivity"
    >
    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:padding="@dimen/large"
            android:layout_height="0dp">
            <TextView
                android:id="@+id/tv_file_name_label"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_name"
                android:textSize="24sp"
                />

            <TextView
                android:id="@+id/tv_file_name"
                app:layout_constraintTop_toTopOf="@id/tv_file_name_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_file_name_label"
                android:layout_width="0dp"
                android:layout_marginLeft="@dimen/large"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                tools:text="Le lorem ipsum est, en imprimerie, une suite de mots sans signification utilisée à titre "
                />
            <TextView
                android:id="@+id/tv_status_label"
                android:layout_marginTop="@dimen/large"
                app:layout_constraintTop_toBottomOf="@id/tv_file_name"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="24sp"
                />

            <TextView
                android:id="@+id/tv_status"
                app:layout_constraintTop_toTopOf="@id/tv_status_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_file_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="...."
                android:textSize="20sp"
                />


            <Button
                android:id="@+id/btn_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/ok"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>